crates/kirin-derive-core/src/generators/property/snapshots/kirin_derive_core__generators__property__tests__enum_mixed.snap
---
source: crates/kirin-derive-core/src/generators/property/tests.rs
expression: "case!\n{\n    #[kirin(type_lattice = Lattice)] enum MyEnum<T>\n    {\n        VariantA { #[wraps] inner: InnerStructA<T> }, #[wraps]\n        VariantB(InnerStructB), VariantC { a: i32, b: T }, #[kirin(constant)]\n        VariantD(i32, T),\n    }\n}"
---
#[automatically_derived]
impl<T> ::kirin::ir::IsConstant for MyEnum<T> {
    fn is_constant(&self) -> bool {
        match self {
            Self::VariantA { inner } => {
                <InnerStructA<T> as ::kirin::ir::IsConstant>::is_constant(inner)
            }
            Self::VariantB(field_0) => {
                <InnerStructB as ::kirin::ir::IsConstant>::is_constant(field_0)
            }
            Self::VariantC { a, b } => false || false,
            Self::VariantD(field_0, field_1) => false || true,
        }
    }
}
