crates/kirin-derive-core/src/generators/property/snapshots/kirin_derive_core__generators__property__tests__struct_regular.snap
---
source: crates/kirin-derive-core/src/generators/property/tests.rs
expression: "case!\n{ #[kirin(constant, type = TestType)] struct MyStruct { a: i32, b: i32, } }"
---
#[automatically_derived]
impl ::kirin::ir::IsConstant for MyStruct {
    fn is_constant(&self) -> bool {
        true
    }
}
