crates/kirin-derive-core/src/generators/property/snapshots/kirin_derive_core__generators__property__tests__struct_wrapper.snap
---
source: crates/kirin-derive-core/src/generators/property/tests.rs
expression: "case!\n{\n    #[kirin(type = TestType)] struct Wrapper<T>\n    { #[wraps] inner: InnerStruct<T>, }\n}"
---
#[automatically_derived]
impl<T> ::kirin::ir::IsConstant for Wrapper<T> {
    fn is_constant(&self) -> bool {
        let Self { inner } = self;
        <InnerStruct<T> as ::kirin::ir::IsConstant>::is_constant(inner)
    }
}
